server/compilers/goLiteJS/src/test/ml1/invalid/array5.go
//missing left bracket in array declaration
package main
var x 3]int
